--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
+    "bufferutil": "^4.0.8",
     "clsx": "^2.1.1",
     "next": "13.5.4",
     "postcss": "^8.4.31",
@@ -25,6 +26,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
+    "utf-8-validate": "^6.0.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
