--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "bufferutil": "^4.0.8",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.17",
     "next": "13.5.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
