--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "bufferutil": "^4.0.8",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
     "next": "13.5.4",
     "postcss": "^8.4.31",
@@ -29,7 +30,8 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "utf-8-validate": "^6.0.5",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
